@@ -1,6 +1,6 @@
 # colormixer
 
-from tkinter.turtle import Screen, Turtle, mainloop
+from turtle import Screen, Turtle, mainloop
 import sys
 sys.setrecursionlimit(20000)   # overcomes, for now, an instability of Python 3.0
 
