@@ -11,7 +11,7 @@ command.
 
 """
 
-from tkinter.turtle import *
+from turtle import *
 
 def yin(radius, color1, color2):
     width(3)
