@@ -15,6 +15,8 @@ Core and Builtins
 Library
 -------
 
+- Bug #3884: Make the turtle module toplevel again.
+
 
 What's New in Python 3.0 release candidate 1
 ============================================
